# ucast_print

./: port.txt  port_str.txt  元数据.txt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ucast/jnidiaoyongdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: serial_port.c
app/src/main/java/com/ucast/jnidiaoyongdemo/: MainActivity.java  PermissionActivity.java  PrintParkTicketActivity.java  SettingActivity.java  StartBrocast.java  UpdateService.java
app/src/main/java/com/ucast/jnidiaoyongdemo/Model/: ApkInfo.java  AppInfo.java  BitmapWithOtherMsg.java  ByteArrCache.java  Common.java  Config.java  KeyboardSwitch.java  MyUsbManager.java  PictureModel.java  ReadPictureManage.java  SendPackage.java  UploadData.java
app/src/main/java/com/ucast/jnidiaoyongdemo/Serial/: KeyBoardSerial.java  OpenPrint.java  PrinterSerialRestart.java  SerialPort.java  SerialTest.java  UsbWithByteSerial.java  UsbWithByteSerialRestart.java
app/src/main/java/com/ucast/jnidiaoyongdemo/advAct/: AdvActivity.java  GlideImageLoader.java
app/src/main/java/com/za/finger/: ZA_finger.java  ZAandroid.java
app/src/main/res/drawable/: bt_background.xml  bt_bluecolor.xml  bt_textcolor.xml
app/src/main/res/layout/: activity_adv.xml  activity_capture.xml  activity_main.xml  activity_permission.xml  activity_print_park_ticket.xml  activity_setting.xml  activity_test_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/ucast/jnidiaoyongdemo/: ExampleUnitTest.java
(+96 files in other folders)
